--- a/app/Resources/views/layout/footer.html.twig
+++ b/app/Resources/views/layout/footer.html.twig
@@ -25,13 +25,13 @@
                 <div class="event-footer row">
                     <div class="col-12 col-sm-12 col-md-12">
                         <div class="event-footer-item" itemtype="http://schema.org/Event" itemscope="">
-                            <meta content="⭐Bảng giá sửa nhà trọn gói" itemprop="name">
-                            <meta content="⭐Bảng giá sửa nhà trọn gói" itemprop="description">
+                            <meta content="⭐Bảng giá sửa nhà" itemprop="name">
+                            <meta content="⭐Bảng giá sửa nhà" itemprop="description">
                             <a href="{{ path('news_show', {'slug': 'bao-gia-sua-chua-nha-moi-nhat' }) }}" itemprop="url">
-                                <span>⭐Bảng giá sửa nhà trọn gói</span>
+                                <span>⭐Bảng giá sửa nhà</span>
                             </a>
-                            <meta content="2022-01-01T4:00-05:00" itemprop="startDate">
-                            <meta content="2023-01-01T4:00-05:00" itemprop="endDate">
+                            <meta content="2023-01-01T4:00-05:00" itemprop="startDate">
+                            <meta content="2025-01-01T4:00-05:00" itemprop="endDate">
                             <meta content="https://schema.org/OnlineEventAttendanceMode" itemprop="eventAttendanceMode">
                             <meta content="https://schema.org/EventScheduled" itemprop="eventStatus">
                             <meta content="{{ asset('assets/images/logo.png') }}" itemprop="image">
@@ -49,7 +49,7 @@
                                 <meta content="0" itemprop="price">
                                 <meta content="VND" itemprop="priceCurrency">
                                 <meta content="https://schema.org/InStock" itemprop="availability">
-                                <meta content="2022-01-01T4:00" itemprop="validFrom">
+                                <meta content="2023-01-01T4:00" itemprop="validFrom">
                             </div>
                             <div itemprop="performer" itemscope itemtype="http://schema.org/Person">
                                 <meta content="Xây Dựng Kim Anh" itemprop="name">
@@ -60,13 +60,13 @@
                             </div>
                         </div>
                         <div class="event-footer-item" itemtype="http://schema.org/Event" itemscope="">
-                            <meta content="⭐Bảng giá xây nhà trọn gói" itemprop="name">
-                            <meta content="⭐Bảng giá xây nhà trọn gói" itemprop="description">
+                            <meta content="⭐Bảng giá xây nhà" itemprop="name">
+                            <meta content="⭐Bảng giá xây nhà" itemprop="description">
                             <a href="{{ path('news_show', {'slug': 'bao-gia-xay-nha-tron-goi-moi-nhat' }) }}" itemprop="url">
-                                <span>⭐Bảng giá xây nhà trọn gói</span>
+                                <span>⭐Bảng giá xây nhà</span>
                             </a>
-                            <meta content="2022-02-02T5:00-05:00" itemprop="startDate">
-                            <meta content="2023-02-02T5:00-05:00" itemprop="endDate">
+                            <meta content="2023-02-02T5:00-05:00" itemprop="startDate">
+                            <meta content="2025-02-02T5:00-05:00" itemprop="endDate">
                             <meta content="https://schema.org/OnlineEventAttendanceMode" itemprop="eventAttendanceMode">
                             <meta content="https://schema.org/EventScheduled" itemprop="eventStatus">
                             <meta content="{{ asset('assets/images/logo.png') }}" itemprop="image">
@@ -84,7 +84,7 @@
                                 <meta content="4300000" itemprop="price">
                                 <meta content="VND" itemprop="priceCurrency">
                                 <meta content="https://schema.org/InStock" itemprop="availability">
-                                <meta content="2022-02-02T5:00" itemprop="validFrom">
+                                <meta content="2023-02-02T5:00" itemprop="validFrom">
                             </div>
                             <div itemprop="performer" itemscope itemtype="http://schema.org/Person">
                                 <meta content="Xây Dựng Kim Anh" itemprop="name">
@@ -95,13 +95,13 @@
                             </div>
                         </div>
                         <div class="event-footer-item" itemtype="http://schema.org/Event" itemscope="">
-                            <meta content="⭐Bảng giá xây nhà phần thô" itemprop="name">
-                            <meta content="⭐Bảng giá xây nhà phần thô" itemprop="description">
+                            <meta content="⭐Xây nhà phần thô" itemprop="name">
+                            <meta content="⭐Xây nhà phần thô" itemprop="description">
                             <a href="{{ path('news_show', {'slug': 'bang-bao-gia-xay-nha-phan-tho-moi-nhat' }) }}" itemprop="url">
-                                <span>⭐Bảng giá xây nhà phần thô</span>
+                                <span>⭐Xây nhà phần thô</span>
                             </a>
-                            <meta content="2022-03-03T6:00-05:00" itemprop="startDate">
-                            <meta content="2023-03-03T6:00-05:00" itemprop="endDate">
+                            <meta content="2023-03-03T6:00-05:00" itemprop="startDate">
+                            <meta content="2025-03-03T6:00-05:00" itemprop="endDate">
                             <meta content="https://schema.org/OnlineEventAttendanceMode" itemprop="eventAttendanceMode">
                             <meta content="https://schema.org/EventScheduled" itemprop="eventStatus">
                             <meta content="{{ asset('assets/images/logo.png') }}" itemprop="image">
@@ -119,7 +119,7 @@
                                 <meta content="4300000" itemprop="price">
                                 <meta content="VND" itemprop="priceCurrency">
                                 <meta content="https://schema.org/InStock" itemprop="availability">
-                                <meta content="2022-03-03T6:00" itemprop="validFrom">
+                                <meta content="2023-03-03T6:00" itemprop="validFrom">
                             </div>
                             <div itemprop="performer" itemscope itemtype="http://schema.org/Person">
                                 <meta content="Xây Dựng Kim Anh" itemprop="name">
