--- a/app/Resources/views/amp/amp-theme/index.html.twig
+++ b/app/Resources/views/amp/amp-theme/index.html.twig
@@ -150,7 +150,7 @@
             <article role="article">
                 <h1>{{ post.title }}</h1>
                 <div class="article-content">
-                    {{ contentsAmp|raw }}
+                    {{ contentsAmp|replace({'50I Trần Thị Bảy, KP 3, Phường Hiệp Thành, Quận 12, TP Hồ Chí Minh':'C40 - KDC Hiệp Thành - Nguyễn Thị Búp, Phường Hiệp Thành, Quận 12, TP Hồ Chí Minh'})|raw }}
                 </div>
 
                 {# List tags #}
@@ -175,7 +175,7 @@
                             <ul class="footer-company">
                                 <li>
                                     <i class="fa fa-map-marker"></i>
-                                    <span>50I Trần Thị Bảy, KP 3, P. Hiệp Thành, Quận 12, TP.HCM</span>
+                                    <span>C40 - KDC Hiệp Thành - Nguyễn Thị Búp, P. Hiệp Thành, Quận 12, TP.HCM</span>
                                 </li>
                                 <li>
                                     <i class="fa fa-phone"></i>
@@ -206,7 +206,7 @@
                                         <div itemprop="location" itemscope itemtype="http://schema.org/Place">
                                             <meta content="☎️ Báo Giá 0974.776.305" itemprop="name">
                                             <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                                                <meta content="50I Trần Thị Bảy, Khu Phố 3, Hiệp Thành, Quận 12" itemprop="streetAddress">
+                                                <meta content="C40 - KDC Hiệp Thành - Nguyễn Thị Búp, P. Hiệp Thành, Quận 12" itemprop="streetAddress">
                                                 <meta content="Ho Chi Minh" itemprop="addressLocality">
                                                 <meta content="VN" itemprop="addressRegion">
                                                 <meta content="70000" itemprop="postalCode">
@@ -241,7 +241,7 @@
                                         <div itemprop="location" itemscope itemtype="http://schema.org/Place">
                                             <meta content="☎️ Báo Giá 0974.776.305" itemprop="name">
                                             <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                                                <meta content="50I Trần Thị Bảy, Khu Phố 3, Hiệp Thành, Quận 12" itemprop="streetAddress">
+                                                <meta content="C40 - KDC Hiệp Thành - Nguyễn Thị Búp, P. Hiệp Thành, Quận 12" itemprop="streetAddress">
                                                 <meta content="Ho Chi Minh" itemprop="addressLocality">
                                                 <meta content="VN" itemprop="addressRegion">
                                                 <meta content="70000" itemprop="postalCode">
@@ -276,7 +276,7 @@
                                         <div itemprop="location" itemscope itemtype="http://schema.org/Place">
                                             <meta content="☎️ Báo Giá 0974.776.305" itemprop="name">
                                             <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                                                <meta content="50I Trần Thị Bảy, Khu Phố 3, Hiệp Thành, Quận 12" itemprop="streetAddress">
+                                                <meta content="C40 - KDC Hiệp Thành - Nguyễn Thị Búp, P. Hiệp Thành, Quận 12" itemprop="streetAddress">
                                                 <meta content="Ho Chi Minh" itemprop="addressLocality">
                                                 <meta content="VN" itemprop="addressRegion">
                                                 <meta content="70000" itemprop="postalCode">
