--- a/app/Resources/views/news/show.html.twig
+++ b/app/Resources/views/news/show.html.twig
@@ -15,8 +15,8 @@
     <meta property="og:title" content="{{ post.getPageTitle() is not null ? post.getPageTitle() : post.getTitle() }}" />
     <meta property="og:description" content="{{ post.getPageDescription() is not null ? post.getPageDescription() : post.getDescription() }}" />
     <meta property="og:image" content="{{ vich_uploader_asset(post, 'imageFile') ? app.request.getUriForPath(vich_uploader_asset(post, 'imageFile')) : absolute_url(asset('assets/images/no-image.png')) }}" />
-    <meta property="og:image:width" content="{{ imageSize[0] }}" />
-    <meta property="og:image:height" content="{{ imageSize[1] }}" />
+    <meta property="og:image:width" content="{{ imageSize ? imageSize[0] : '526' }}" />
+    <meta property="og:image:height" content="{{ imageSize ? imageSize[1] : '275' }}" />
 {% endblock %}
 
 {% block twitterImage %}
@@ -66,7 +66,7 @@
                     <h1 class="entry-title block-title">{{ post.getTitle() }}</h1>
                     
                     <div class="news-container">
-                        {{ contentsLazy|raw }}
+                        {{ contentsLazy|replace({'50I Trần Thị Bảy, KP 3, Phường Hiệp Thành, Quận 12, TP Hồ Chí Minh':'C40 - KDC Hiệp Thành - Nguyễn Thị Búp, Phường Hiệp Thành, Quận 12, TP Hồ Chí Minh'})|raw }}
                     </div>
 
                     {# List tags #}
