--- a/app/Resources/views/layout/footer.html.twig
+++ b/app/Resources/views/layout/footer.html.twig
@@ -7,7 +7,7 @@
                 <ul class="footer-company">
                     <li>
                         <i class="fa fa-map-marker"></i>
-                        <span>50I Trần Thị Bảy, KP 3, P. Hiệp Thành, Quận 12, TP.HCM</span>
+                        <span>C40 - KDC Hiệp Thành - Nguyễn Thị Búp, P. Hiệp Thành, Quận 12, TP.HCM</span>
                     </li>
                     <li>
                         <i class="fa fa-phone"></i>
@@ -38,7 +38,7 @@
                             <div itemprop="location" itemscope itemtype="http://schema.org/Place">
                                 <meta content="☎️ Báo Giá 0974.776.305" itemprop="name">
                                 <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                                    <meta content="50I Trần Thị Bảy, Khu Phố 3, Hiệp Thành, Quận 12" itemprop="streetAddress">
+                                    <meta content="C40 - KDC Hiệp Thành - Nguyễn Thị Búp, P. Hiệp Thành, Quận 12" itemprop="streetAddress">
                                     <meta content="Ho Chi Minh" itemprop="addressLocality">
                                     <meta content="VN" itemprop="addressRegion">
                                     <meta content="70000" itemprop="postalCode">
@@ -73,7 +73,7 @@
                             <div itemprop="location" itemscope itemtype="http://schema.org/Place">
                                 <meta content="☎️ Báo Giá 0974.776.305" itemprop="name">
                                 <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                                    <meta content="50I Trần Thị Bảy, Khu Phố 3, Hiệp Thành, Quận 12" itemprop="streetAddress">
+                                    <meta content="C40 - KDC Hiệp Thành - Nguyễn Thị Búp, P. Hiệp Thành, Quận 12" itemprop="streetAddress">
                                     <meta content="Ho Chi Minh" itemprop="addressLocality">
                                     <meta content="VN" itemprop="addressRegion">
                                     <meta content="70000" itemprop="postalCode">
@@ -108,7 +108,7 @@
                             <div itemprop="location" itemscope itemtype="http://schema.org/Place">
                                 <meta content="☎️ Báo Giá 0974.776.305" itemprop="name">
                                 <div itemprop="address" itemscope itemtype="http://schema.org/PostalAddress">
-                                    <meta content="50I Trần Thị Bảy, Khu Phố 3, Hiệp Thành, Quận 12" itemprop="streetAddress">
+                                    <meta content="C40 - KDC Hiệp Thành - Nguyễn Thị Búp, P. Hiệp Thành, Quận 12" itemprop="streetAddress">
                                     <meta content="Ho Chi Minh" itemprop="addressLocality">
                                     <meta content="VN" itemprop="addressRegion">
                                     <meta content="70000" itemprop="postalCode">
