--- a/app/Resources/views/layout/slide.html.twig
+++ b/app/Resources/views/layout/slide.html.twig
@@ -10,27 +10,19 @@
         </ol>
         <div class="carousel-inner">
             <div class="item active">
-                <a href="{{ path('news_show', {'slug': 'bao-gia-xay-nha-tron-goi-moi-nhat'}) }}">
-                    <picture>
-                        <source
-                            data-srcset="{{ asset('assets/images/banner/xuan-2023-2.jpg') | imagine_filter('banner_768_400') }}"
-                            media="(max-width: 799px)" />
-                        <source
-                            data-srcset="{{ asset('assets/images/banner/xuan-2023-2.jpg') | imagine_filter('banner_1500_550') }}"
-                            media="(min-width: 800px)" />
-                        <img
-                            src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                            data-src="{{ asset('assets/images/banner/xuan-2023-2.jpg') | imagine_filter('banner_1500_550') }}"
-                            alt="Xây Dựng Kim Anh mừng xuân 2023"
-                            class="lazyload" />
-                    </picture>
-                </a>
-                <div class="container">
-                    <div class="carousel-caption text-left">
-                        <h2 class="text-uppercase">Xây Dựng Kim Anh</h2>
-                        <p>Mừng xuân 2023 cùng nhiều ưu đãi đặc biệt</p>
-                    </div>
-                </div>
+                <picture>
+                    <source
+                        data-srcset="{{ asset('assets/images/banner/xuan-2023-3.jpg') | imagine_filter('banner_768_400') }}"
+                        media="(max-width: 799px)" />
+                    <source
+                        data-srcset="{{ asset('assets/images/banner/xuan-2023-3.jpg') | imagine_filter('banner_1500_550') }}"
+                        media="(min-width: 800px)" />
+                    <img
+                        src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
+                        data-src="{{ asset('assets/images/banner/xuan-2023-3.jpg') | imagine_filter('banner_1500_550') }}"
+                        alt="Công Ty Xây Dựng Kim Anh"
+                        class="lazyload" />
+                </picture>
             </div>
             
             <div class="item">
@@ -52,7 +44,7 @@
                 <div class="container">
                     <div class="carousel-caption text-left">
                         <h2 class="text-uppercase">Xây Dựng Kim Anh</h2>
-                        <p>Công ty xây dựng uy tín số 1 tại TP HCM</p>
+                        <p>Công Ty Xây Dựng Uy Tín Số #1 Tại TP HCM</p>
                     </div>
                 </div>
             </div>
@@ -75,12 +67,12 @@
                 <div class="container">
                     <div class="carousel-caption text-left">
                         <h2 class="text-uppercase">Xây Dựng Kim Anh</h2>
-                        <p>Chuyên thi công xây nhà trọn gói tại TP HCM</p>
+                        <p>Chuyên Thi Công Xây Nhà Trọn Gói Tại TP HCM</p>
                     </div>
                 </div>
             </div>
             <div class="item">
-                <a href="{{ path('homepage') }}">
+                <a href="{{ path('news_show', {'slug':'bang-bao-gia-xay-nha-phan-tho-moi-nhat'}) }}">
                     <picture>
                         <source
                             srcset="{{ asset('assets/images/banner/banner-thi-cong-phan-tho.jpg') | imagine_filter('banner_768_400') }}"
@@ -96,30 +88,30 @@
                 <div class="container">
                     <div class="carousel-caption text-left">
                         <h2 class="text-uppercase">Xây Dựng Kim Anh</h2>
-                        <p>Thi công xây dựng phần thô</p>
+                        <p>Chuyên Thi Công Xây Dựng Phần Thô Tại TP HCM</p>
                     </div>
                 </div>
             </div>
             <div class="item">
-                <a href="{{ path('news_show', {'slug': 'bang-gia-thiet-ke-nha-pho-tai-tphcm'}) }}">
+                <a href="{{ path('homepage') }}">
                     <picture>
                         <source
-                            data-srcset="{{ asset('assets/images/banner/banner-thiet-ke-nha.jpg') | imagine_filter('banner_768_400') }}"
+                            data-srcset="{{ asset('assets/images/banner/xay-dung-kim-anh-02.jpg') | imagine_filter('banner_768_400') }}"
                             media="(max-width: 799px)" />
                         <source
-                            data-srcset="{{ asset('assets/images/banner/banner-thiet-ke-nha.jpg') | imagine_filter('banner_1500_550') }}"
+                            data-srcset="{{ asset('assets/images/banner/xay-dung-kim-anh-02.jpg') | imagine_filter('banner_1500_550') }}"
                             media="(min-width: 800px)" />
                         <img
                             src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                            data-src="{{ asset('assets/images/banner/banner-thiet-ke-nha.jpg') | imagine_filter('banner_1500_550') }}"
-                            alt="Chuyên thiết kế thi công nhà phố, biệt thự"
+                            data-src="{{ asset('assets/images/banner/xay-dung-kim-anh-02.jpg') | imagine_filter('banner_1500_550') }}"
+                            alt="Thương Hiệu Của Sự Bền Vững"
                             class="lazyload" />
                     </picture>
                 </a>
                 <div class="container">
                     <div class="carousel-caption text-left">
                         <h2 class="text-uppercase">Xây Dựng Kim Anh</h2>
-                        <p>Chuyên thiết kế thi công nhà phố, biệt thự</p>
+                        <p>Thương Hiệu Của Sự Bền Vững</p>
                     </div>
                 </div>
             </div>
