--- a/app/Resources/views/layout/slide.html.twig
+++ b/app/Resources/views/layout/slide.html.twig
@@ -1,5 +1,5 @@
 {% if showSlide is defined %}
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div id="myCarousel" class="carousel slide" data-interval="3000" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
