--- a/web/assets/scss/front/pages/_news.scss
+++ b/web/assets/scss/front/pages/_news.scss
@@ -32,6 +32,20 @@
     }
 
     .news-container {
+        div[name="tableOfContents"] {
+            margin-bottom: 6px;
+        }
+
+        div[style="margin-left:30px"], div[style="margin-left:60px"] {
+            display: list-item;
+            list-style-type: disc;
+        }
+
+        hr {
+            margin-top: 18px;
+            margin-bottom: 18px;
+        }
+
         ul, ol {
             padding-left: 15px;
             margin-bottom: 15px;
