--- a/web/assets/scss/admin/admin.scss
+++ b/web/assets/scss/admin/admin.scss
@@ -53,6 +53,10 @@
         label.control-label {
             font-weight: 600;
         }
+
+        input.ordering {
+            width: 80px;
+        }
     }
 
     #news_category {
