--- a/app/Resources/views/admin/news/new.html.twig
+++ b/app/Resources/views/admin/news/new.html.twig
@@ -25,6 +25,7 @@
                                         {{ form_row(form.description) }}
                                         {{ form_row(form.contents) }}
                                         {{ form_row(form.categoryPrimary) }}
+                                        {{ form_row(form.ordering) }}
                                         {{ form_row(form.category) }}
                                         {{ form_row(form.tags) }}
 
