--- a/app/Resources/views/admin/newscategory/_form.html.twig
+++ b/app/Resources/views/admin/newscategory/_form.html.twig
@@ -4,6 +4,7 @@
     {{ form_row(form.url) }}
     {{ form_row(form.description) }}
     {{ form_row(form.enable) }}
+    {{ form_row(form.sortBy) }}
 
     <div class="card-title">
         <h3>{{ 'label.seo'|trans }}</h3>
