--- a/app/Resources/views/admin/newscategory/new.html.twig
+++ b/app/Resources/views/admin/newscategory/new.html.twig
@@ -22,6 +22,7 @@
                                         {{ form_row(form.url) }}
                                         {{ form_row(form.description) }}
                                         {{ form_row(form.enable) }}
+                                        {{ form_row(form.sortBy) }}
 
                                         <div class="card-title">
                                             <h3>{{ 'label.seo'|trans }}</h3>
