--- a/app/Resources/views/contact/index.html.twig
+++ b/app/Resources/views/contact/index.html.twig
@@ -24,15 +24,19 @@
                 {{ include('news/components/breadcrumbs.html.twig') }}
 
                 <div class="company">
-                    <h3 class="text-uppercase">Xây Dựng Kim Anh</h3>
+                    <h3 class="text-uppercase">Công ty TNHH Tư Vấn Thiết Kế Xây Dựng Kim Anh</h3>
                     <ul>
                         <li>
                             <i class="fa fa-map-marker"></i>
                             <span><strong>VPGD: C40 - KDC Hiệp Thành - Nguyễn Thị Búp, P. Hiệp Thành, Quận 12, TP.HCM</strong></span>
                         </li>
                         <li>
+                            <i class="fas fa-address-card"></i>
+                            <span><strong>MST: 0314264130</strong></span>
+                        </li>
+                        <li>
                             <i class="fa fa-phone"></i>
-                            <span><strong>0974.776.305 A Tuấn</strong></span>
+                            <span><strong>0974 776 305 – 088.609.4455 – 0987 244 305 - A Tuấn</strong></span>
                         </li>
                         <li>
                             <i class="fas fa-envelope"></i>
@@ -44,7 +48,8 @@
                         </li>
                     </ul>
 
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5183.138577870701!2d106.6260217829886!3d10.874663133182306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317529ff3fd2db8f%3A0xcfc53cd07209f4cd!2zS2h1IETDom4gQ8awLCBIaeG7h3AgVGjDoG5oLCBRdeG6rW4gMTIsIFRow6BuaCBwaOG7kSBI4buTIENow60gTWluaCwgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2shk!4v1677810579679!5m2!1svi!2shk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <br>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.172689309072!2d106.62786421431773!3d10.874466660351096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317529fc088f21ef%3A0x83303dfe3b06e6c1!2zWMOCWSBE4buwTkcgS0lNIEFOSA!5e0!3m2!1sen!2s!4v1680400221718!5m2!1sen!2s" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
             
                 {% for message in app.flashes('error') %}
