--- a/app/Resources/views/homepage/index.html.twig
+++ b/app/Resources/views/homepage/index.html.twig
@@ -5,6 +5,12 @@
     <noscript><link rel="stylesheet" href="{{ asset('build/css/homepage.css') }}" ></noscript>
 {% endblock %}
 
+{% block structuredOpenGraph %}
+    <meta property="og:image" content="{{ absolute_url(asset('assets/images/banner/xay-dung-kim-anh-5.jpg')) }}" />
+    <meta property="og:image:width" content="800" />
+    <meta property="og:image:height" content="420" />
+{% endblock %}
+
 {% block structuredOrganization %}
     <script type="application/ld+json">
     {
