--- a/app/Resources/views/homepage/index.html.twig
+++ b/app/Resources/views/homepage/index.html.twig
@@ -47,7 +47,9 @@
         <div class="wrapper-container-item slogin">
             <div class="container slogin-title">
                 <div class="row">
-                    <div class="col-12 col-md-10"><p>Bạn đang muốn thi công dự án xây dựng? Hãy liên hệ ngay với chúng tôi để được tư vấn miễn phí!</p></div>
+                    <div class="col-12 col-md-10">
+                        <div class="slogin-wrapper">Bạn đang muốn thi công dự án xây dựng? Hãy liên hệ ngay đến <h1>Xây Dựng Kim Anh</h1> để được tư vấn miễn phí!</div>
+                    </div>
                     <div class="col-12 col-md-2 text-right"><a href="tel:0974776305"> <i class="fas fa-mobile-alt" aria-hidden="true"></i> 0974776305</a></div>
                 </div>
             </div>
