--- a/web/assets/scss/front/pages/_contact.scss
+++ b/web/assets/scss/front/pages/_contact.scss
@@ -2,6 +2,10 @@
     .company {
         margin-bottom: 30px;
 
+        h1 {
+            font-size: 26px;
+        }
+
         ul {
             padding-left: 0;
 
