--- a/app/Resources/views/news/tags.html.twig
+++ b/app/Resources/views/news/tags.html.twig
@@ -6,13 +6,13 @@
 {% endblock %}
 
 {% block title %}{{ 'post.archives.title'|trans({'%title%': tag.getPageTitle() is not null ? tag.getPageTitle() : tag.getName(), '%currentPage%': pagination.currentPageNumber, '%totalPage%': pagination.pageCount}) }}{% endblock %}
-{% block description %}{{ tag.getPageDescription() is not null ? tag.getPageDescription() : tag.getPageTitle() }}{% endblock %}
+{% block description %}{{ 'post.archives.description'|trans({'%description%': tag.getPageDescription() is not null ? tag.getPageDescription() : tag.getName(), '%currentPage%': pagination.currentPageNumber, '%totalPage%': pagination.pageCount}) }}{% endblock %}
 {% block keyword %}{{ tag.getPageKeyword() }}{% endblock %}
 
 {% block structuredOpenGraph %}
-    <meta property="og:type" content="object" />
-    <meta property="og:title" content="{{ 'post.archives.title'|trans({'%title%': tag.getPageTitle() is not null ? tag.getPageTitle() : tag.getName(), '%currentPage%': pagination.currentPageNumber, '%totalPage%': pagination.pageCount}) }}" />
-    <meta property="og:description" content="{{ tag.getPageDescription() }}" />
+<meta property="og:type" content="object" />
+<meta property="og:title" content="{{ 'post.archives.title'|trans({'%title%': tag.getPageTitle() is not null ? tag.getPageTitle() : tag.getName(), '%currentPage%': pagination.currentPageNumber, '%totalPage%': pagination.pageCount}) }}" />
+<meta property="og:description" content="{{ 'post.archives.description'|trans({'%description%': tag.getPageDescription() is not null ? tag.getPageDescription() : tag.getName(), '%currentPage%': pagination.currentPageNumber, '%totalPage%': pagination.pageCount}) }}" />
 {% endblock %}
 
 {% block body %}
