--- a/app/Resources/views/news/components/related.html.twig
+++ b/app/Resources/views/news/components/related.html.twig
@@ -5,6 +5,16 @@
                 <h3>{{ 'news.news_related'|trans }}</h3>
                 <div class="row">
                     {% for row in relatedNews %}
+                        {% set imagePath = (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) %}
+                        {% set imagePathFilter = (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_406_280') %}
+                                                
+                        {% if convert_images.fileExists(imagePath) == false %}
+                            {% set imagePath = imagePath | imagine_filter('news_406_280') %}
+                        {% elseif convert_images.webpFileExists(imagePath, 'media/cache/news_406_280') == true %}
+                            {% set imagePath = '/media/cache/news_406_280' ~ imagePath ~ '.webp' %}
+                        {% else %}
+                            {% set imagePath = convert_images.webpConvert(imagePathFilter, '', true) %}
+                        {% endif %}
                         <div class="col-xs-12 col-sm-4 col-md-3">
                             <div class="related-wrapper">
                                 <div class="related-img">
@@ -13,7 +23,7 @@
                                         height="140"
                                         class="img-thumbnail lazyload"
                                         src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
-                                        data-src="{{ (vich_uploader_asset(row, 'imageFile') ? vich_uploader_asset(row, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_406_280') }}"
+                                        data-src="{{ absolute_url(imagePath) }}"
                                         alt="{{row.getTitle()}}" />
                                     {% if category is defined %}
                                         <a href="{{ path('news_show', {'slug': row.getUrl(), 'danh-muc': category.getUrl() }) }}" title="{{ row.getTitle() }}">
