--- a/app/Resources/views/homepage/index.html.twig
+++ b/app/Resources/views/homepage/index.html.twig
@@ -59,6 +59,14 @@
             <div class="container">
                 <div class="row marketing">
                     {% for priceOnHomepage in blockPricesOnHomepage %}
+                        {% set imagePath = (vich_uploader_asset(priceOnHomepage, 'imageFile') ? vich_uploader_asset(priceOnHomepage, 'imageFile') : asset('assets/images/no-image.png')) %}
+                        {% set imagePathFilter = (vich_uploader_asset(priceOnHomepage, 'imageFile') ? vich_uploader_asset(priceOnHomepage, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_218_218') %}
+                                                
+                        {% if convert_images.fileExists(imagePath) == false %}
+                            {% set imagePath = imagePath | imagine_filter('news_218_218') %}
+                        {% else %}
+                            {% set imagePath = convert_images.webpConvert(imagePathFilter, '', true) %}
+                        {% endif %}
                         <div class="col-md-3 col-sm-3">
                             <div class="intro">
                                 <div class="img">
@@ -69,7 +77,7 @@
                                                     src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw=="
                                                     alt="{{ priceOnHomepage.getTitle() }}"
                                                     class="img-responsive lazyload"
-                                                    data-src="{{ (vich_uploader_asset(priceOnHomepage, 'imageFile') ? vich_uploader_asset(priceOnHomepage, 'imageFile') : asset('assets/images/no-image.png')) | imagine_filter('news_218_218') }}"
+                                                    data-src="{{ imagePath != false ? absolute_url(imagePath) : absolute_url(imagePathFilter) }}"
                                                     width="218"
                                                     height="218" />
                                             </div>
